# Underwater_Superlimb

./: .gitignore  LICENSE  README.md
c++/: CMakeLists.txt
c++/realsense-IMU/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  matplotlibcpp.h  reading_imu_data  reading_imu_data.cpp  realsense_imu  realsense_imu_demo.cpp
python/: Dynamixel.py  Xbox.py  test_method.py
python/csv/: data_2022-08-12 11:24:24.692851.csv  data_2022-08-12 12:34:48.213199.csv  data_2022-08-12 12:38:03.566603.csv  data_2022-08-12 12:41:09.271277.csv  data_2022-08-13 10:07:18.988513.csv  data_2022-08-13 15:03:44.170351.csv  data_2022-08-13 15:10:57.615346.csv  data_2022-08-13 15:15:25.822028.csv  imu_data_2022-08-30 22-37-53_save.csv  imu_data_2022-09-01 17-35-14_save.csv  imu_data_2022-09-01 17-36-35_save.csv  imu_data_2022-09-01 17-43-40_save.csv  imu_data_2022-09-01 17-44-58_save.csv  imu_data_2022-09-01 17-45-37_save.csv  imu_data_2022-09-01 18-04-27_save.csv  imu_data_2022-09-01 20-18-43_save.csv  imu_data_2022-09-01 21-44-18_save.csv
python/script/: D435i.py  Dynamixel.py  Exp_1_imu_control.py  Exp_2_throat_control.py  Exp_3_double_control.py  IMU_Microstrain.py  IMU_Recognition.py  IMU_Record.py  P4-voice-recognition-DTW-MFCC.ipynb  Plot_Animation.py  Plot_Audio.py  Plot_servo_thruster.py  Socket_IMU.py  Socket_Mi.py  T200_Truster.py  Test_Servo.py  Voice_Base.py  Voice_DTW.py  Xbox.py  fft_mapping.py  lda.ipynb  remote_keyboard_server.py  run_robot.py  run_robot_D435i.py  run_robot_IMU.py  run_robot_double_sensor.py  run_robot_double_stepless_1.py  run_robot_double_stepless_1_exp_1.py  run_robot_exp_3_double.py  run_robot_joystick.py  run_robot_spherical_coord.py  run_robot_stepless_exp_2.py  run_robot_throat_mi.py  run_robot_yaw_PID.py  socket_imu_client.py  socket_imu_command.py  socket_imu_command_client.py  socket_imu_command_server.py  socket_imu_server.py  socket_imu_stepless_1.py  (+5 more)
python/script/DataCollectionPC/: data_collection.py
python/script/cpp/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  IMU_Record_cpp.cpp  Microstrain_IMU_cpp.h  Microstrain_IMU_cpp.h.gch  imu_record_exe  matplotlibcpp.h  matplotlibcpp.h.gch
python/script/csv_command/: 2023-02-15 01:21:01.251965.csv  2023-02-15 01:28:33.307405.csv  2023-02-15 01:31:51.523332.csv  2023-02-15 01:46:31.195100.csv  2023-02-15 01:56:36.625734.csv  2023-02-15 02:02:18.464087.csv  2023-02-15 04:25:46:67_imu_data.csv  2023-02-15 04:53:49:82_imu_data.csv  2023-02-15 05:24:50:89_imu_data.csv  2023-02-15 05:34:34:94_imu_data.csv  2023-02-15 05:40:54:35_imu_data.csv  2023-02-15 06:55:41:66_imu_data.csv  2023-02-15 07:01:02:90_imu_data.csv  2023-02-15 07:18:01:63_imu_data.csv  2023-02-15 07:25:26:82_imu_data.csv  2023-02-15 07:27:31:77_imu_data.csv  2023-02-15 07:30:11:63_imu_data.csv  2023-02-15 07:38:22:38_imu_data.csv  2023-02-15 07:55:30:86_imu_data.csv  2023-02-16 00:03:51:24_imu_data.csv  2023-02-16 00:08:03:67_imu_data.csv  2023-02-16 00:14:42:90_imu_data.csv  2023-02-16 00:39:45:34_imu_data.csv  2023-02-16 00:39:58:83_imu_data.csv  2023-02-16 00:42:52:93_imu_data.csv  2023-02-16 04:36:00:69_imu_data.csv  2023-02-16 05:00:31:22_imu_data.csv  2023-02-16 05:02:00:74_imu_data.csv  2023-02-16 05:11:10:78_imu_data.csv  2023-02-16 05:12:49:28_imu_data.csv  2023-02-16 05:15:30:68_imu_data.csv  2023-02-16 05:25:15:96_imu_data.csv  2023-02-16 05:28:07:28_imu_data.csv  2023-02-16 05:30:06:92_imu_data.csv  2023-02-16 05:31:21:98_imu_data.csv  2023-02-16 05:32:27:13_imu_data.csv  2023-02-16 05:33:50:76_imu_data.csv  2023-02-16 05:36:50:4_imu_data.csv  2023-02-16 05:39:53:40_imu_data.csv  2023-02-16 05:44:07:28_imu_data.csv  (+46 more)
python/script/csv_command_0310/: 2023-03-10 21:35:54:41_imu_data.csv  2023-03-10 21:41:03:95_imu_data.csv  2023-03-10 21:41:52:57_imu_data.csv  2023-03-10 21:45:11:84_imu_data.csv  2023-03-10 21:46:03:93_imu_data.csv  2023-03-10 21:48:45:64_imu_data.csv  2023-03-10 23:40:50:49_imu_data.csv  2023-03-10 23:45:57:96_imu_data.csv  2023-03-10 23:48:06:38_imu_data.csv  2023-03-10 23:49:29:27_imu_data.csv  2023-03-11 00:00:45:35_imu_data.csv  2023-03-11 00:02:10:26_imu_data.csv  2023-03-11 15:47:27:96_imu_data.csv  2023-03-11 16:03:54:18_imu_data.csv  2023-03-11 16:31:30:62_imu_data.csv  2023-03-11 16:35:58:94_imu_data.csv  2023-03-11 17:19:33:28_imu_data.csv  2023-03-11 17:23:21:69_imu_data_ok_1.csv  2023-03-11 17:43:41:79_imu_data.csv  2023-03-11 17:48:48:62_imu_data_ok_2.csv  2023-03-11 17:56:33:41_imu_data.csv  2023-03-11 18:04:02:73_imu_data.csv  2023-03-11 18:05:55:79_imu_data.csv  2023-03-11 20:03:32:80_imu_data.csv  2023-03-11 20:06:06:52_imu_data.csv  2023-03-11 20:14:02:75_imu_data.csv  2023-03-11 20:18:29:3_imu_data.csv  2023-03-11 20:24:14:_imu_data.csv  2023-03-11 20:56:21:51_imu_data.csv  2023-03-11 20:58:13:52_imu_data.csv  2023-03-11 21:00:39:49_imu_data.csv  2023-03-11 21:02:18:30_imu_data.csv  2023-03-11 21:05:26:9_imu_data.csv  2023-03-11 21:09:18:31_imu_data.csv  2023-03-11 21:23:50:75_imu_data.csv  2023-03-11 21:42:15:46_imu_data.csv  2023-03-11 22:13:05:26_imu_data.csv  2023-03-11 22:29:39:57_imu_data.csv  2023-03-11 22:32:13:81_imu_data.csv  2023-03-11 22:39:17:88_imu_data.csv  (+127 more)
python/script/csv_imu/: Fri Jan 13 00:55:28 2023_imu_data.csv  data_2023-02-21 15:19:31.524585.csv  data_2023-03-09 23:30:00.850763.csv
python/script/csv_imu_0214/: 2023-02-15 04:25:46:67_imu_data.csv  2023-02-15 04:49:24:6_imu_data.csv  2023-02-15 04:53:49:82_imu_data.csv  2023-02-15 05:13:29:52_imu_data.csv  2023-02-15 05:24:50:89_imu_data.csv  2023-02-15 05:34:34:94_imu_data.csv  2023-02-15 05:40:54:35_imu_data.csv  2023-02-15 07:04:57:91_imu_data.csv  2023-02-15 07:12:17:67_imu_data.csv  2023-02-15 07:15:55:59_imu_data.csv  2023-02-15 07:18:01:63_imu_data.csv  2023-02-15 07:25:26:82_imu_data.csv  2023-02-15 07:27:31:77_imu_data.csv  2023-02-15 07:30:11:63_imu_data.csv  2023-02-15 07:38:22:38_imu_data.csv  2023-02-15 07:55:30:86_imu_data.csv  2023-02-16 00:08:03:67_imu_data.csv  2023-02-16 00:11:56:85_imu_data.csv  2023-02-16 00:14:42:90_imu_data.csv  (+67 more)
(+577 files in other folders)
